@@ -15,6 +15,7 @@ Changes in PixelLight 0.9.5-R1 (not yet released)
 - Bugfix: "PLGraphics::IEConvert" e.g. RGB to RGBA is now working for floating point image formats
 - Bugfix: "PLGraphics::IEScale" was not always working correctly
 - Bugfix: "PLPhysics::SNMPhysicsCharacterController" rotation was broken in "PixelLight 0.9.4-R1"
+- Bugfix: "PLGraphics::ImageLoaderJPG": Saving a given RGBA image was not working
 
 
 Changes in PixelLight 0.9.4-R1 (released on December 23, 2010)
